# tensorstore

./: .bazelrc  .bazelversion  .buildinfo  .clang-format  .gitignore  .style.yapf  BENCHMARK_COMPARISON_REPORT.md  BENCHMARK_SUMMARY.md  BUILD.bazel  CMakeLists.txt  COMMIT_SUMMARY.md  COMPREHENSIVE_COMPLETION_REPORT.md  Dockerfile.netcdf  Dockerfile.netcdf-arm  Dockerfile.verification  Dockerfile.week9  INTEGRATION_TEST_RESULTS.md  LICENSE  MACOS_BUILD_GUIDE.md  MACOS_COMPLETION_REPORT.md  NETCDF_PROJECT_SUMMARY.md  NETCDF_WRITE_IMPLEMENTATION.md  QUICK_START_GUIDE.md  README.md  REMAINING_TASKS.md  WORKSPACE  bazel_to_cmake.py  bazelisk.py  build_in_docker.sh  build_netcdf_driver_macos.sh  build_netcdf_examples.sh  cmake_helpers.bzl  context.html  environment.html  external.bzl  external2.bzl  genindex.html  index.html  index_space.html  installation.html  (+22 more)
.doctrees/: context.doctree  environment.doctree  index.doctree  (+6 more)
examples/: BUILD  CMakeLists.txt  compute_percentiles.cc  create_array.cc  data_type_invoker.h  extract_slice.cc  image_convolution.cc  map_apply.cc  read_structured_zarr3.cc  status_result.cc  test-chunked.cc  write_n5.cc  write_n5_seed.cc
examples/driver_demo/: main.cc
examples/netcdf_attrs/: BUILD  main.cc
examples/netcdf_driver_stub/: BUILD  main.cc
examples/netcdf_make_2d/: main.cc
examples/netcdf_make_3d/: BUILD
examples/netcdf_make_demo/: BUILD  main.cc
examples/netcdf_open_json/: main.cc
examples/netcdf_open_reader/: BUILD
examples/netcdf_open_spec/: BUILD
examples/netcdf_read_var/: BUILD  main.cc
examples/netcdf_reader_demo/: BUILD  main.cc
examples/netcdf_slice_json/: BUILD
examples/netcdf_smoke/: BUILD  main.cc
examples/python/beam/: BUILD  compute_dfbyf.py  compute_percentiles.py  example.gin  pipeline_test.py  reshard_tensor.py  run_pipeline.py  setup.py
examples/tstore_open_netcdf_json/: BUILD
tools/bazel_platforms/: BUILD.bazel  platform_mappings
tools/cmake/bazel_to_cmake/testdata/bazel_skylib/: BUILD.bazel  config.json  use_flag.bzl
tools/cmake/bazel_to_cmake/testdata/bazel_skylib/golden/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/bazel_skylib/golden/_bindir/: config.h
tools/cmake/bazel_to_cmake/testdata/bazel_skylib/golden/_srcdir/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/cc_includes/: BUILD.bazel  WORKSPACE.bazel  b.cc
tools/cmake/bazel_to_cmake/testdata/cc_includes/golden/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/cc_includes/golden/_srcdir/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/cc_includes/parent/: BUILD.bazel
tools/cmake/bazel_to_cmake/testdata/cc_includes/parent/child/: a.cc  a.h
tools/cmake/bazel_to_cmake/testdata/grpc_generate_cc/: BUILD.bazel  WORKSPACE.bazel  a.cc  c.proto  config.json
tools/cmake/bazel_to_cmake/testdata/grpc_generate_cc/golden/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/grpc_generate_cc/golden/_srcdir/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/local_mirror/: BUILD.bazel  WORKSPACE.bazel  config.json
tools/cmake/bazel_to_cmake/testdata/local_mirror/golden/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/local_mirror/golden/_find_pkg_redirects_/: lpm-config.cmake
tools/cmake/bazel_to_cmake/testdata/local_mirror/golden/_srcdir/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/native_rules/: .bazelrc  BUILD.bazel  WORKSPACE.bazel  _bazelrc  config.json  x.h  y.h
tools/cmake/bazel_to_cmake/testdata/native_rules/golden/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/native_rules/golden/_srcdir/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/native_rules/subdir/: BUILD.bazel  x.cc
tools/cmake/bazel_to_cmake/testdata/rules_nasm/: BUILD.bazel  config.json
tools/cmake/bazel_to_cmake/testdata/rules_nasm/golden/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/rules_nasm/golden/_srcdir/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/rules_proto/: BUILD.bazel  WORKSPACE.bazel  a.proto  b.proto  c.proto  config.json  d.proto  x.proto
tools/cmake/bazel_to_cmake/testdata/rules_proto/golden/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/rules_proto/golden/_srcdir/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/rules_proto/src/subdir/: y.proto
tools/cmake/bazel_to_cmake/testdata/third_party_http_archive/: BUILD.bazel  WORKSPACE.bazel  config.json
tools/cmake/bazel_to_cmake/testdata/third_party_http_archive/golden/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/third_party_http_archive/golden/_find_pkg_redirects_/: half-extra.cmake
tools/cmake/bazel_to_cmake/testdata/third_party_http_archive/golden/_srcdir/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/upb_bootstrap_compiler/: BUILD.bazel  WORKSPACE.bazel  a.cc  config.json  d.proto
tools/cmake/bazel_to_cmake/testdata/upb_bootstrap_compiler/golden/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/upb_bootstrap_compiler/stage0/: d.upb.c  d.upb.h
tools/cmake/bazel_to_cmake/testdata/upb_proto_library/: BUILD.bazel  WORKSPACE.bazel  c.proto  config.json
tools/cmake/bazel_to_cmake/testdata/upb_proto_library/golden/: build_rules.cmake
tools/cmake/bazel_to_cmake/testdata/upb_proto_library/golden/_srcdir/: build_rules.cmake
tools/docs/: BUILD.bazel  build_docs.py  json_pprint.py  tensorstore_autosummary.py  update_doctests.py
ts-netcdf/tensorstore/driver/netcdf/: BUILD  BUILD.bazel  driver.cc  driver.h  minidriver.cc  minidriver.h  netcdf_driver.cc  netcdf_driver.h  netcdf_driver_full.cc  netcdf_driver_full.h  netcdf_driver_impl.h  netcdf_driver_registration.cc  netcdf_integration_test.cc  netcdf_integration_test_simple.cc  netcdf_json_binding.h  netcdf_metadata.cc  netcdf_metadata.h  netcdf_simple_test.cc  netcdf_smoketest.cc  runtime_test.cc
ts-netcdf/tools/cmake/bazel_to_cmake/testdata/rules_nasm/: BUILD.bazel  WORKSPACE.bazel  a.asm
ts-netcdf/tools/cmake/bazel_to_cmake/testdata/rules_proto/: BUILD.bazel  a.proto  b.proto  config.json
ts-netcdf/tools/cmake/bazel_to_cmake/testdata/third_party_http_archive/: WORKSPACE.bazel
(+6845 files in other folders)
