load("@bazel_skylib//lib:selects.bzl", "selects")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["*"]))

# Config settings. Aliases can be imported into a BUILD file via a list
# comprehension like:
#
#[
#    alias(
#        name = name,
#        actual = "@tensorstore//:{target}".format(target = name),
#    )
#    for name in [
#        "linux_arm64_clang",
#        "linux_arm64_gcc",
#        "linux_x86_64_clang",
#        "linux_x86_64_gcc",
#        "windows_x86_64_msvc",
#        "windows_x86_64_mingw_gcc",
#        "linux_x86_64",
#        "macos_x86_64",
#        "macos_arm64",
#        "windows_x86_64",
#        "linux_clang",
#        "linux_gcc",
#        "windows_mingw_gcc",
#        "windows_msvc",
#        "macos_clang",
#        "compiler_msvc",
#        "compiler_clang",
#        "compiler_regular_gcc",
#        "compiler_mingw_gcc",
#        "compiler_unknown",
#        "compiler_gcc",
#        "x86_64",
#        "arm64",
#        "linux",
#        "macos",
#        "windows",
#
#    ]
#]
#

# Combined os / cpu / compiler settings
#
# :linux_arm64_clang
# :linux_arm64_gcc
# :linux_x86_64_clang
# :linux_x86_64_gcc
# :windows_x86_64_msvc
# :windows_x86_64_mingw_gcc
selects.config_setting_group(
    name = "linux_arm64_clang",
    match_all = [
        ":compiler_clang",
        ":linux",
        ":arm64",
    ],
)

selects.config_setting_group(
    name = "linux_arm64_gcc",
    match_all = [
        ":compiler_gcc",
        ":linux",
        ":arm64",
    ],
)

selects.config_setting_group(
    name = "linux_x86_64_clang",
    match_all = [
        ":compiler_clang",
        ":linux",
        ":x86_64",
    ],
)

selects.config_setting_group(
    name = "linux_x86_64_gcc",
    match_all = [
        ":compiler_gcc",
        ":linux",
        ":x86_64",
    ],
)

selects.config_setting_group(
    name = "windows_x86_64_msvc",
    match_all = [
        ":compiler_msvc",
        ":windows",
        ":x86_64",
    ],
)

selects.config_setting_group(
    name = "windows_x86_64_mingw_gcc",
    match_all = [
        ":compiler_mingw_gcc",
        ":x86_64",
    ],
)

# Combined os / cpu settings
#
# :linux_x86_64
# :macos_x86_64
# :macos_arm64
# :windows_x86_64
selects.config_setting_group(
    name = "linux_x86_64",
    match_all = [
        ":linux",
        ":x86_64",
    ],
)

selects.config_setting_group(
    name = "macos_x86_64",
    match_all = [
        ":macos",
        ":x86_64",
    ],
)

selects.config_setting_group(
    name = "macos_arm64",
    match_all = [
        ":macos",
        ":arm64",
    ],
)

selects.config_setting_group(
    name = "windows_x86_64",
    match_all = [
        ":windows",
        ":x86_64",
    ],
)

# Combined os / compiler settings
# :linux_clang
# :linux_gcc
# :windows_mingw_gcc
# :windows_msvc
# :macos_clang

selects.config_setting_group(
    name = "linux_clang",
    match_all = [
        ":compiler_clang",
        ":linux",
    ],
)

selects.config_setting_group(
    name = "linux_gcc",
    match_all = [
        ":compiler_gcc",
        ":linux",
    ],
)

selects.config_setting_group(
    name = "windows_mingw_gcc",
    match_all = [
        ":compiler_mingw_gcc",
        ":linux",
    ],
)

selects.config_setting_group(
    name = "windows_msvc",
    match_all = [
        ":compiler_msvc",
        ":windows",
    ],
)

selects.config_setting_group(
    name = "macos_clang",
    match_all = [
        ":compiler_clang",
        ":macos",
    ],
)

# Compiler selection
#
# :compiler_msvc
# :compiler_clang
# :compiler_regular_gcc
# :compiler_mingw_gcc
# :compiler_gcc
config_setting(
    name = "compiler_msvc",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "msvc-cl",
    },
)

config_setting(
    name = "compiler_clang",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "clang",
    },
)

config_setting(
    name = "compiler_regular_gcc",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "gcc",
    },
)

config_setting(
    name = "compiler_mingw_gcc",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "mingw-gcc",
    },
)

config_setting(
    name = "compiler_unknown",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "compiler",
    },
)

selects.config_setting_group(
    name = "compiler_gcc",
    match_any = [
        ":compiler_regular_gcc",
        ":compiler_mingw_gcc",
        # To workaround https://github.com/bazelbuild/bazel/issues/17794, assume
        # any unknown compiler is GCC.
        ":compiler_unknown",
    ],
)

# Cpu settings
#
# :arm64
# :x86_64
config_setting(
    name = "x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

config_setting(
    name = "arm64",
    constraint_values = ["@platforms//cpu:arm64"],
)

# Os settings
#
# :linux
# :macos
# :windows
config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)
