[project]
name = "tensorstore"
requires-python = ">= 3.11"
dynamic = ["version"]
dependencies = [
  "numpy>=1.22.0",
  "ml_dtypes>=0.5.0",
]
description = "Read and write large, multi-dimensional arrays"
readme = "README.md"
authors = [
  { name = "TensorStore Team", email = "tensorstore-team@google.com" },
]
license = "Apache-2.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/google/tensorstore"
Issues = "https://github.com/google/tensorstore/issues"
Documentation = "https://google.github.io/tensorstore"

[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "setuptools_scm>=8.1.0",
  "pip",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# It would be nice to include the commit hash in the version, but that
# can't be done in a PEP 440-compatible way.
version_scheme = "no-guess-dev"
# Test PyPI does not support local versions.
local_scheme = "no-local-version"
fallback_version = "0.0.0"
