load("@com_github_grpc_grpc//bazel:generate_cc.bzl", "generate_cc")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "a",
    srcs = ["a.cc"],
    deps = [":cc_grpc"],
)

proto_library(
    name = "c_proto",
    srcs = ["c.proto"],
    cc_api_version = 2,
)

# Mimic cc_grpc_library

generate_cc(
    name = "cc__grpc_codegen",
    srcs = [":c_proto"],
    flags = ["services_namespace=grpc_gen"],
    plugin = "@com_github_grpc_grpc//src/compiler:grpc_cpp_plugin",
    visibility = ["//visibility:private"],
    well_known_protos = False,
)

cc_library(
    name = "cc_grpc",
    srcs = [":cc__grpc_codegen"],
    hdrs = [":cc__grpc_codegen"],
    deps = ["@com_github_grpc_grpc//:grpc++_codegen_proto"],
)
