# NOTE: ":h_file" should work as well as "s.h", right?
cc_library(
    name = "a",
    srcs = ["a.cc"],
    hdrs = ["a.h"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "bb",
    srcs = ["a.cc"],
    hdrs = ["a.h"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "h_file",
    srcs = select({
        "//conditions:default": ["x.h"],
        "//:other": ["y.h"],
    }),
    outs = ["a.h"],
    cmd = "$(location :bb) $$(dirname $$(dirname $< )) $$(dirname $< ) $< $@ ",
    tools = [":bb"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "other",
    values = {"cpu": "darwin_arm64"},
)

proto_library(
    name = "c_proto",
    srcs = ["c.proto"],
    cc_api_version = 2,
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cc_proto_library(
    name = "c_proto_cc",
    deps = [
        ":c_proto",
    ],
)

cc_test(
    name = "a_test",
    srcs = ["a.cc"],
    deps = [":c_proto_cc"],
)

proto_library(
    name = "c_proto_2",
    srcs = ["c.proto"],
    cc_api_version = 2,
)

alias(
    name = "c_proto_alias",
    actual = ":c_proto",
)

alias(
    name = "c_proto_cc_alias",
    actual = ":c_proto_cc",
)

alias(
    name = "a_alias",
    actual = ":a",
)
